# services/estoque/docs/swagger.json
@@ -490,7 +490,8 @@
             "type": "object",
             "required": [
                 "descricao",
-                "saldo"
+                "saldo",
+                "valor"
             ],
             "properties": {
                 "descricao": {
@@ -500,11 +501,18 @@
                 "saldo": {
                     "type": "integer",
                     "example": 20
+                },
+                "valor": {
+                    "type": "number",
+                    "example": 15990
                 }
             }
         },
         "dto.CriarProdutoRequest": {
             "type": "object",
+            "required": [
+                "valor"
+            ],
             "properties": {
                 "codigo": {
                     "type": "string",
@@ -517,6 +525,10 @@
                 "saldo": {
                     "type": "integer",
                     "example": 10
+                },
+                "valor": {
+                    "type": "number",
+                    "example": 15990
                 }
             }
         },
@@ -566,6 +578,9 @@
                 },
                 "saldo": {
                     "type": "integer"
+                },
+                "valor": {
+                    "type": "number"
                 }
             }
         },
